--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         applicationId "com.ashomok.tesseractsample"
-        minSdkVersion 16
-        targetSdkVersion 23
+        minSdkVersion 19
+        targetSdkVersion 26
         versionCode 4
         versionName "1.0.2"
     }
@@ -22,7 +22,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.rmtheis:tess-two:5.4.1'
+    def supportLibraryVersion = '26.+'
+    compile "com.android.support:appcompat-v7:${supportLibraryVersion}"
+    compile 'com.rmtheis:tess-two:8.0.0'
     compile 'com.android.support:support-v13:23.0.0'
 }
